# ZeldaTPHD-ScreenOrientation

./: Cargo.toml  README.md  ZeldaTP.c  ZeldaTPHD-ScreenOrientation.sln  proc.c
ZeldaTPHD-ScreenOrientation/: Program.cs  ZeldaTPHD-ScreenOrientation.csproj
src/: main.rs
