[package]
name = "ZeldaTPOrientation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs"}
winapi = { version = "0.3", features = ["processenv", "libloaderapi", "psapi"] }
regex = "1.5"
[dependencies.windows]
version = "0.48.0"    # Current version as of writing
features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
